--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": [
+      "cypress"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
